fixed route problems on items index view

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,10 +1,10 @@
 <h1>Everything We Got!</h1>
 
 <div>
-  <% @categories.each do |category| %> 
+  <% @categories.each do |category| %>
       <h1 class="category"> <%= category.title %></h1>
           <% category.items.each do |item| %>
-              <h3 class="item"><%= link_to  item.title, item_path(item) %></h3> 
+              <h3 class="item"><%= link_to  item.title, category_item_path(category, item) %></h3> 
                       <%= image_tag(item.image_path) %>
                       <%= button_to "Add to Cart", carts_path(item_id: item.id), class: "btn btn-danger" %>
           <% end %>
