--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,7 +5,7 @@
       <h1 class="category"> <%= category.title %></h1>
           <% category.items.each do |item| %>
               <h3 class="item"><%= link_to  item.title, category_item_path(category, item) %></h3>
-                      <%= image_tag(item.image_path) %>
+                      <%= image_tag "item.image_path" %>
                       <%= button_to "Add to Cart", carts_path(item_id: item.id), class: "btn btn-danger" %>
           <% end %>
     <% end %>
