--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,9 @@
           <% end %>
         </ul>
       <%- unless current_user == nil -%>
-        <li><%= link_to "My Favorites", user_favorite_gifs_path(current_user) %></li>
         <li><%= link_to "Log out", logout_path, method: :delete %> </li>
       <%- else -%>
-        <li><%= link_to "Log in", login_path, method: :get %> </li>
+        <li><%= link_to "Log In", login_path, method: :get %> </li>
       <%- end -%>
         <li><%= link_to "My Cart", '/cart' %></li>
     </ul>
