flushed out create user spec with sad paths

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
     <!-- NavBar pull left -->
   <div class="nav-wrapper">
   <a class="brand-home"><%= link_to "PogHogs", root_path %></a>
-    <!-- NavBar pull right -->
+  <a class="brand-home"></a><%= link_to "Shop", items_path %></a>
+  <!-- NavBar pull right -->
     <ul class="nav-right">
       <li><a class="dropdown-button" data-activates="dropdown1">Categories<i class="material-icons right"></i></a></li>
         <ul id="dropdown1" class="dropdown-content">
