--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome <%= current_user.first_name %></h1>
+<h1 class="greeting">Welcome <%= current_user.first_name %></h1>
 
 <h3>Your Profile</h3>
 <p>First Name: <%= current_user.first_name %> </p>
