completed testing/functionality for login before checkout

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,3 +4,10 @@
 Item: <%= Item.find(id).title %><br>
 Quantity: <%= quantity %><br>
 <% end %>
+
+<%- unless current_user == nil -%>
+  <%= button_to "Proceed to checkout"%>
+<%- else -%>
+  <%= button_to "Log In to Checkout", login_path, method: :get %>
+  <small><%= link_to "Create Account", new_user_path %></small>
+  <%- end -%>
