--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,28 +10,35 @@
 
   <body>
     <!-- Navbar -->
-<nav>
-    <!-- NavBar pull left -->
-  <div class="nav-wrapper">
-  <a class="brand-home"><%= link_to "PogHogs", root_path %></a>
-  <a class="brand-home"></a><%= link_to "Shop", items_path %></a>
-  <!-- NavBar pull right -->
-    <ul class="nav-right">
-      <li><a class="dropdown-button" data-activates="dropdown1">Categories<i class="material-icons right"></i></a></li>
-        <ul id="dropdown1" class="dropdown-content">
-          <% all_categories.each do |category| %>
-            <li><%=link_to category.title, category_items_path(category) %></li>
-          <% end %>
-        </ul>
-      <%- unless current_user == nil -%>
-        <li><%= link_to "Log out", logout_path, method: :delete %> </li>
-      <%- else -%>
-        <li><%= link_to "Log In", login_path, method: :get %> </li>
-      <%- end -%>
-        <li><%= link_to "My Cart", '/cart' %></li>
-    </ul>
-  </div>
-</nav>
+  <nav class="navbar navbar-inverse navbar-static-top">
+    <div class="container">
+            <!-- NavBar pull left -->
+          <div id="navbar" class="navbar-collapse collapse">
+             <ul class="nav navbar-nav">
+               <li><%= link_to "PogHogs", root_path %></li>
+               <li><%= link_to "Shop", items_path %></li>
+               <li class="dropdown">
+                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <% all_categories.each do |category| %>
+                      <li><%=link_to category.title, category_items_path(category) %></li>
+                    <% end %>
+                  </ul>
+               </li>
+             </ul>
+
+                  <!-- NavBar pull right -->
+              <ul style="padding-top: 7px;" class="nav navbar-nav navbar-right">
+                <%- unless current_user == nil -%>
+                  <li><span class="fa-stack fa-lg"><%= link_to "Log out", logout_path, method: :delete %> </li>
+                <%- else -%>
+                  <li><span class="fa-stack fa-lg"><%= link_to "Log In", login_path, method: :get %> </li>
+                <%- end -%>
+                  <li><span class="fa-stack fa-lg"><%= link_to "My Cart", '/cart' %></li>
+              </ul>
+          </div>
+    </div>
+  </nav>
   <% flash.each do |type, message| %>
     <%= content_tag :div, message, class: type %>
   <% end %>
