--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,13 +1,14 @@
 <h1>Welcome to PogHogs</h1>
-<h3>Everything We Got!</h3>
 
-<div>
   <% @categories.each do |category| %>
-      <h2 class="category"> <%= category.title %></h2>
+    <div class="Row">
+      <h3 class="category"> <%= category.title %></h3>
           <% category.items.each do |item| %>
-              <h3 class="item"><%= link_to  item.title, category_item_path(category, item) %></h3> 
-                      <%= image_tag(item.image_path) %>
-                      <%= button_to "Add to Cart", carts_path(item_id: item.id), class: "btn btn-danger" %>
+            <div class="Column" style="text-align: center;">
+              <h2 class="item"><%= link_to  item.title, category_item_path(category, item) %></h2>
+              <%= image_tag(item.image_path) %>
+              <%= button_to "Add to Cart", carts_path(item_id: item.id), class: "btn btn-danger" %>
+            </div>
           <% end %>
-    <% end %>
-</div>
+    </div>
+  <% end %>
