--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,9 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="/categories/pogs">Pogs</a></li>
-                <li><a href="/categories/sets">Sets</a></li>
-                <li><a href="/categories/slammers">Slammers</a></li>
-                <li><a href="/categories/boards">Boards</a></li>
-                <li><a href="/categories/cases">Cases</a></li>
+                <% all_categories.each do |category| %>
+                  <li><%= link_to category.title, category_path(category) %></li>
+                <% end %>
               </ul>
             </li>
             <%- unless current_user == nil -%>
