--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,7 +6,7 @@
       <h2 class="category"> <%= category.title %></h2>
           <% category.items.each do |item| %>
               <h3 class="item"><%= link_to  item.title, category_item_path(category, item) %></h3>
-                      <%= image_tag "item.image_path" %>
+                      <%= link_to (image_tag "item.image_path"), category_item_path(category, item) %>
                       <%= button_to "Add to Cart", carts_path(item_id: item.id), class: "btn btn-danger" %>
           <% end %>
     <% end %>
