completed status update for items, user cannot buy retired items

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -3,6 +3,11 @@
 <%= image_tag "@item.image_path" %>
 <%= @item.description %>
 $<%= @item.price %>
-<%= button_to "Add to Cart", carts_path(item_id: @item.id), class: "btn btn-danger" %>
+
+<%- unless @item.status == 1 -%>
+  <%= button_to "Add to Cart", carts_path(item_id: @item.id), class: "btn btn-danger" %>
+<% else %>
+  <h4 class="retired">Item Retired</h4>
+<% end %>
 
 <%= link_to "Back to #{@item.category.title}", category_path(@item.category) %>
