--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -8,7 +8,12 @@
 
               <h3 class="item"><%= link_to  item.title, category_item_path(category, item) %></h3>
                       <%= image_tag(item.image_path) %>
-                      <%= button_to "Add to Cart", carts_path(item_id: item.id), class: "btn btn-danger" %>
+                      <%- unless item.status == 1 -%>
+                        <%= button_to "Add to Cart", carts_path(item_id: item.id), class: "btn btn-danger" %>
+                      <% else %>
+                        <h4 class="retired">Item Retired</h4>
+                      <% end %>
+
           <% end %>
     <% end %>
 </div>
