--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,13 +1,15 @@
 <h1>Your Cart</h1>
 
 <% @cart.contents.each do |id, quantity| %>
-Item: <%= Item.find(id).title %><br>
+Item: <%= @items.find(id).title %><br>
 Quantity: <%= quantity %><br>
+Price <%= @items.find(id).price %><br>
 <% end %>
 
+Subtotal: <%= @cart.subtotal %>
 <%- unless current_user == nil -%>
   <%= button_to "Proceed to checkout"%>
 <%- else -%>
-  <%= button_to "Log In to Checkout", login_path, method: :get %>
+  <%= button_to "Log In to Checkout", login_path, method: :get  %>
   <small><%= link_to "Create Account", new_user_path %></small>
   <%- end -%>
