touches up total method for show page

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -15,6 +15,7 @@
           Price: <%= item.price  %>
           Sub-Total: <%= (item.price * quantity) %>
       </div>
+      Total: <%= @cart.total %>
   <% end %>
 </div>
 
