--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,7 +5,7 @@
       <h3 class="category"> <%= category.title %></h3>
           <% category.items.each do |item| %>
 
-            <div class="Column" style="text-align: center;">
+            <div class="<%= item.title %>" style="text-align: center;">
               <h2 class="item"><%= link_to  item.title, category_item_path(category, item) %></h2>
               <%= image_tag(item.image_path) %>
               <%- unless item.status == 1 -%>
