--- a/app/views/application/admin_dashboard.html.erb
+++ b/app/views/application/admin_dashboard.html.erb
@@ -6,3 +6,4 @@
 <p>First Name: <%= current_user.first_name %> </p>
 <p>Last Name: <%= current_user.last_name %> </p>
 <p>Email: <%= current_user.email %> </p>
+<%= link_to "Edit My Profile", edit_user_path(current_user) %>
