cleans up styling for website

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,8 @@
 
   <body>
 
-    <!-- Navbar -->
-
-    <header class="navbar navbar-fixed-top">
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <%= link_to "PogHogs", '/', id: "logo" %>
         <nav>
@@ -35,7 +34,8 @@
           </ul>
         </nav>
       </div>
-    </header>
+        <!-- /.container -->
+    </nav>
 
     <% flash.each do |type, message| %>
       <%= content_tag :div, message, class: type %>
