--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,12 +1,34 @@
 <h1><%= @category.title %></h1>
 
-<ul>
-  <% @category.items.each do |item| %>
-    <li>
-    <h3><%= item.title %></h3><br>
-    <%= item.image_path %><br>
-    Price: <%= item.price %>
-    <%# Needs button for "Add to cart" here %>
-    </li>
-  <% end %>
-</ul>
+<% @category.items.each do |item| %>
+  <div class="<%= item.title %>" style="text-align: center;">
+    <div class="column">
+      <div class="col-sm-4 col-lg-4 col-md-4">
+          <div class="thumbnail">
+              <%= image_tag(item.image_path) %>
+              <div class="caption">
+                  <h4><%= link_to  item.title, category_item_path(@category, item) %>
+                  </h4>
+                  <p><%= item.description %></p>
+                  <h4 class="pull-right">$<%= item.price %></h4>
+                  <%- unless item.status == 1 -%>
+                    <%= button_to "Add to Cart", carts_path(item_id: item.id), class: "btn btn-danger" %>
+                  <% else %>
+                    <h4 class="Item retired">Item Retired</h4>
+                  <% end %>
+              </div>
+              <!-- <div class="ratings">
+                  <p class="pull-right">15 reviews</p>
+                  <p>
+                      <span class="glyphicon glyphicon-star"></span>
+                      <span class="glyphicon glyphicon-star"></span>
+                      <span class="glyphicon glyphicon-star"></span>
+                      <span class="glyphicon glyphicon-star"></span>
+                      <span class="glyphicon glyphicon-star"></span>
+                  </p>
+              </div> -->
+          </div>
+      </div>
+    </div>
+  </div>
+<% end %>
