adds the remove button to the view, passes hidden info in the params, sets up the cart#destroy path and method, spikes out the destroy method in the controller

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -14,6 +14,7 @@
             <% end %>
           Price: <%= item.price  %><br>
           Subtotal: <%= (item.price * quantity) %><br>
+          <%= button_to "Remove", '/cart', method: :delete, params: {id: item.id} %>
       </div>
   <% end %>
 </div>
