--- a/app/views/application/admin_dashboard.html.erb
+++ b/app/views/application/admin_dashboard.html.erb
@@ -7,6 +7,10 @@
 <% @orders.each do |order| %>
 <%= link_to "Invoice Number: #{order.id}", order_path(order)%> <br>
 Current Status: <%= order.current_status %><br><br>
+<%= button_to "Cancel", order_path(order), method: :put, status: order.status = 3 if order.status == 0 || order.status == 1 %>
+<%= button_to "Mark as Paid", order_path(order), method: :put, status: order.status = 1 if order.status == 0 %>
+<%= button_to "Mark as Completed",order_path(order), method: :put, status: order.status = 2 if order.status == 1 %>
+
 <% end %>
 
 <h3>Current Count of Orders by Status</h3>
