--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -25,4 +25,5 @@ nav {
   text-align: left;
 }
 
-  .center {text-align: center; margin-left: auto; margin-right: auto; margin-bottom: auto; margin-top: auto;}
+.center {text-align: center; margin-left: auto; margin-right: auto; margin-bottom: auto; margin-top: auto;}
+.right {text-align: right; margin-left: auto; margin-right: auto; margin-bottom: auto; margin-top: auto;}
