updated seed/view files to render images hosted on imgur

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @item.title %></h1>
 
-<%= image_tag "@item.image_path" %>
+<%= image_tag(@item.image_path) %>
 <%= @item.description %>
 $<%= @item.price %>
 
