--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -102,7 +102,8 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="http://placehold.it/320x150" alt="">
+                            <!-- <img src="http://placehold.it/320x150" alt=""> -->
+                            <%= image_tag(item.image_path) %>
                             <div class="caption">
                                 <h4><%= link_to  item.title, category_item_path(item.category, item) %>
                                 </h4>
