--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,11 +1,12 @@
 <h1 class="center">Your Cart</h1>
 
 <div class="cart_list">
-  <table style="width:80%">
+  <table style="width:100%">
     <tr>
       <th>Item</th>
-      <th>Quantity</th>
+      <th>Description</th>
       <th>Price</th>
+      <th>Quantity</th>
       <th>Subtotal</th>
       <th>Update Quantity</th>
     </tr>
@@ -13,9 +14,11 @@
   <% @cart_items.each do |item, quantity| %>
       <div class="cart_item">
         <tr>
-          <td> <%= item.title %></td><br>
-          <td><%= quantity %></td>
+          <td><%= item.title %>
+              <div class="thumbimg"><%= link_to image_tag(item.image_path), category_item_path(item.category, item) %></td></div><br>
+          <td><%= item.description %></td>
           <td><%= item.price  %></td>
+          <td><%= quantity %></td>
           <td><%= (item.price * quantity) %></td>
             <%= form_tag('/cart', id: item.id, method: :put) do %>
                 <div>
