--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,10 @@
     </nav>
 
     <% flash.each do |type, message| %>
-      <%= content_tag :div, message, class: type %>
+      <div class="alert <%= bootstrap_class_for(type) %> fade in">
+        <button class="close" data-dismiss="alert">×</button>
+        <%= message %>
+      </div>
     <% end %>
 
     <div class="container">
