--- a/app/views/application/admin_dashboard.html.erb
+++ b/app/views/application/admin_dashboard.html.erb
@@ -5,15 +5,15 @@
 
 <h4>Orders</h4>
 <% @orders.each do |order| %>
-<%= link_to "Invoice Number: #{order.id}", order_path(order)%> <br>
-Current Status: <%= order.current_status %><br><br>
+<%= link_to "Invoice Number: #{order.id}", admin_order_path(order)%> <br>
+Current Status: <%= order.status.upcase %><br><br>
   <%= button_to "Mark as Completed",order_path(order), method: :put, status: order.status = 2 if order.status == 1 %>
   <%= button_to "Cancel", order_path(order), method: :put, status: order.status = 3 if order.status == 0 || order.status == 1 %>
   <%= button_to "Mark as Paid", order_path(order), method: :put, status: order.status = 1 if order.status == 0 %>
 <% end %>
 
 <h3>Current Count of Orders by Status</h3>
-<p>Ordered: <%= @orders.status_ordered %> </p>
-<p>Paid: <%= @orders.status_paid %></p>
-<p>Completed: <%= @orders.status_completed %></p>
-<p>Cancelled: <%= @orders.status_cancelled %></p>
+<p>Ordered: <%= @orders.ordered.count %> </p>
+<p>Paid: <%= @orders.paid.count %></p>
+<p>Completed: <%= @orders.completed.count %></p>
+<p>Cancelled: <%= @orders.cancelled.count %></p>
