--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @item.title %></h1>
 
-<%= image_tag(@item.image_path) %>
+<div class="img"><%= image_tag(@item.image_path) %></div>
 <%= @item.description %>
 $<%= @item.price %>
 
