--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Order Number: <%= @order.id %></h1>
-<h4>Status: <%= @order.current_status %> </h4>
+<h4>Status: <%= @order.status.upcase %> </h4>
 <h6>Order Submitted: <%= @order.created_at.strftime("%d %b. %Y") %></h6>
 
 <% @order.order_items.each do |order_item| %>
