--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -15,7 +15,7 @@
       <div class="cart_item">
         <tr>
           <td><%= item.title %>
-              <div class="thumbimg"><%= link_to image_tag(item.image_path), category_item_path(item.category, item) %></td></div><br>
+              <div class="img"><%= link_to image_tag(item.image_path), category_item_path(item.category, item) %></td></div><br>
           <td><%= item.description %></td>
           <td><%= item.price  %></td>
           <td><%= quantity %></td>
