added shop now link to home page, could use some styling

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -32,6 +32,7 @@
 
       <h1 class="home_title">PogHogs</h1>
       <h3 class="home_blurb">The premiere marketplace for pogs and pog accessories.</h3>
+      <h3><%= link_to "Shop Now!", items_path %></h3>
         <div class="row">
 
             <div class="col-md-9">
