--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,13 +2,34 @@
 <h4>Status: <%= @order.status.upcase %> </h4>
 <h6>Order Submitted: <%= @order.created_at.strftime("%d %b. %Y") %></h6>
 
-<% @order.order_items.each do |order_item| %>
-<%= link_to order_item.item.title, category_item_path(order_item.item.category, order_item.item) %><br>
-Unit price: <%= order_item.item.price %><br>
-Quantity: <%= order_item.quantity %><br>
-Subtotal: <%= order_item.quantity * order_item.item.price %><br>
-<% end %><br>
+Customer Number: <%= @order.user_id %><br>
+Customer Name: <%= @order.user.first_name %> <%= @order.user.last_name %><br>
+Customer Email: <%= @order.user.email %>
 
-Order Total: $<%= @order.total_price %><br>
+<div class="order_list">
+  <table style="width:100%">
+    <tr>
+      <th>Item</th>
+      <th>Price</th>
+      <th>Quantity</th>
+      <th>Subtotal</th>
+    </tr>
 
-<%= @order.update_at %>
+      <% @order.order_items.each do |order_item| %>
+    <div class="order_item">
+      <tr>
+        <td><%= link_to order_item.item.title, category_item_path(order_item.item.category, order_item.item) %><br></td>
+        <td><%= order_item.item.price %></td>
+        <td><%= order_item.quantity %></td>
+        <td><%= order_item.quantity * order_item.item.price %></td><br>
+      <% end %>
+      </tr>
+    </div>
+  </table>
+</div>
+  <br>
+
+
+  <div class="total right">Order Total: $<%= @order.total_price %><br></div>
+
+  <div class="total right"><%= @order.update_at %></div>
