added 'order completed/cancelled at' on order_show and admin_order_show pages

--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -30,6 +30,6 @@ Customer Email: <%= @order.user.email %>
   <br>
 
 
-  <div class="total right">Order Total: $<%= @order.total_price %><br></div>
+  <div class="total right">Order Total: $<%= @order.total_price %><br></div><br>
 
   <div class="total right"><%= @order.update_at %></div>
