--- a/app/views/application/admin_dashboard.html.erb
+++ b/app/views/application/admin_dashboard.html.erb
@@ -4,12 +4,20 @@
 <%= link_to "Edit My Profile", edit_user_path(current_user) %><br><br>
 
 <h3>Current Count of Orders by Status</h3>
-<p>Ordered: <%= @orders.ordered.count %> </p>
-<p>Paid: <%= @orders.paid.count %></p>
-<p>Completed: <%= @orders.completed.count %></p>
-<p>Cancelled: <%= @orders.cancelled.count %></p><br>
+<p>Ordered: <%= @all_orders.ordered.count %> </p>
+<p>Paid: <%= @all_orders.paid.count %></p>
+<p>Completed: <%= @all_orders.completed.count %></p>
+<p>Cancelled: <%= @all_orders.cancelled.count %></p><br>
 
-<h4 class="center">Orders</h4>
+<h4 class="center">Orders</h4><br>
+<div class="center">
+  <%= link_to "All Orders |", admin_dashboard_path(:current_status => nil) %>
+  <%= link_to "Ordered |", admin_dashboard_path(:current_status => "ordered") %>
+  <%= link_to "Paid |", admin_dashboard_path(:current_status => "paid") %>
+  <%= link_to "Completed |", admin_dashboard_path(:current_status => "completed") %>
+  <%= link_to "Cancelled", admin_dashboard_path(:current_status => "cancelled") %>
+</div><br>
+
 <div class="order_list">
   <table style="width:100%">
     <tr>
@@ -18,16 +26,18 @@
       <th>Date Placed</th>
       <th>Updated at</th>
       <th>Total</th>
+      <th></th>
+      <th>Change Status</th>
     </tr>
     <tr>
-      <% @orders.each do |order| %>
+      <% @orders.order(:id).each do |order| %>
       <td><%= link_to "Order Number: #{order.id}", admin_order_path(order)%></td>
       <td><%= order.status.upcase %></td>
       <td><%= order.created_at.strftime("%d %b. %Y") %></td>
       <td><%= order.updated_at.strftime("%l:%M%P, %d %b. %Y") %></td>
       <td><%= order.total_price %></td>
-  <%#= button_to "Mark as Completed",order_path(order), method: :put, status: order.status = 2 if order.status == 1 %>
-  <%#= button_to "Cancel", order_path(order), method: :put, status: order.status = 3 if order.status == 0 || order.status == 1 %>
-  <%#= button_to "Mark as Paid", order_path(order), method: :put, status: order.status = 1 if order.status == 0 %>
+      <td><%= button_to "Mark as Completed", admin_order_path(order, :status => "completed"), method: :put %></td>
+      <td><%= button_to "Cancel", admin_order_path(order, :status => "cancelled"), method: :put %></td>
+      <td><%= button_to "Mark as Paid", admin_order_path(order, :status => "paid"), method: :put %></td>
     </tr>
       <% end %>
