created functionality/view for admin to view single order

--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -4,8 +4,8 @@
 
 Customer Number: <%= @order.user_id %><br>
 Customer Name: <%= @order.user.first_name %> <%= @order.user.last_name %><br>
-Customer Email: <%= @order.user.email %>
-Customer Address: <%= %>
+Customer Email: <%= @order.user.email %><br>
+Customer Address: <%= @order.user.address%>
 
 <div class="order_list">
   <table style="width:100%">
