--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,6 +9,9 @@
   <%= f.label :email %>
   <%= f.text_field :email %><br>
 
+  <%= f.label :address %>
+  <%= f.text_area :address %><br>
+
   <%= f.label :password %>
   <%= f.password_field :password %><br>
 
