--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -39,3 +39,15 @@ img {
 img:hover {
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
+
+#shopnow > a{
+  /*-webkit-text-stroke: .5px black;*/
+   font-size: 1.7em;
+   color: yellow;
+   text-shadow:
+       /*3px 3px 0 #000,*/
+     -1px -1px 0 #000,
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+       1px 1px 0 #000;
+}
