implements cart_items simple delegator, model tests, logic in the view to show an empty cart

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,10 +1,13 @@
 <h1>Your Cart</h1>
 
 <div class="cart_list">
-      <% @cart_items.each do |item, quantity| %>
+  <% if @cart_items.empty? %>
+        <%= link_to "Your Cart is Empty", items_path %>
+  <% else %>
+      <% @cart_items.each do |item| %>
           <div class="cart_item">
               Item: <%= item.title %><br>
-              Quantity: <%= quantity %><br>
+              Quantity: <%= item.quantity %><br>
                 <%= form_tag('/cart', id: item.id, method: :put) do %>
                     <div>
                       <%= hidden_field_tag :id, "#{item.id}" %>
@@ -13,10 +16,11 @@
                     </div>
                 <% end %>
               Price: <%= item.price  %><br>
-              Subtotal: <%= (item.price * quantity) %><br>
+              Subtotal: <%= item.subtotal %><br>
               <%= button_to "Remove", '/cart', method: :delete, params: {id: item.id} %>
           </div>
       <% end %>
+    <% end %>
 </div>
 
 <div class="total">
