--- a/app/views/application/admin_dashboard.html.erb
+++ b/app/views/application/admin_dashboard.html.erb
@@ -3,6 +3,8 @@
 <h3 class="greeting">Welcome <%= current_user.first_name %></h3>
 <%= link_to "Edit My Profile", edit_user_path(current_user) %><br><br>
 
+<%= link_to "View Items Inventory", admin_items_path %>
+
 <h3>Current Count of Orders by Status</h3>
 <p>Ordered: <%= @all_orders.ordered.count %> </p>
 <p>Paid: <%= @all_orders.paid.count %></p>
