--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,27 +1,25 @@
 <h1>All Items</h1>
 
-<% @categories.each do |category| %>
-  <div class="row">
-    <h3 class="category"> <%= category.title %></h3>
-        <% category.items.each do |item| %>
+<div class="cart_list">
+  <table style="width:100%">
+    <tr>
+      <th>Item</th>
+      <th>Description</th>
+      <th>Price</th>
+      <th>Status</th>
+    </tr>
 
-        <div class="<%= item.title %>" style="text-align: center;">
-          <div class="column">
-            <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
-                    <%= image_tag(item.image_path) %>
-                    <div class="caption">
-                        <h4><%= link_to  item.title, category_item_path(category, item) %>
-                        </h4>
-                        <p><%= item.description %></p>
-                        <h4 class="status"><%= item.status %></h4>
-                        <h4><%= link_to "Edit", edit_admin_item_path(item) %>
-                        <h4 class="pull-right">$<%= item.price %></h4>
-                    </div>
-                </div>
-            </div>
-          </div>
+    <% @items.each do |item| %>
+        <div class="<%= item.title %>">
+          <tr>
+            <td><%= link_to item.title, category_item_path(item.category, item) %>
+                <div class="img"><%= image_tag(item.image_path) %></td></div>
+            <td><%= item.description %></td>
+            <td><%= item.price  %></td>
+            <td><%= item.status %></td>
+            <td><%= link_to "Edit", edit_admin_item_path(item) %></td>
+          </tr>
         </div>
-      <% end %>
-  </div>
-<% end %>
+    <% end %>
+  </table>
+</div>
