--- a/app/views/admin/items/_form.html.erb
+++ b/app/views/admin/items/_form.html.erb
@@ -16,7 +16,8 @@
 <%= f.text_field :price %><br>
 
 <%= f.label :status %>
-<%= f.collection_radio_buttons(:id, @statuses, :first, :first) %><br>
+<%= f.collection_radio_buttons(:status, @statuses, :first, :first, checked: @item.status) %><br>
+<%#= f.collection_radio_buttons(:id, @statuses, :id, :status, checked: @item.status) %><br>
 
 <%= f.submit %>
 
