--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -18,7 +18,7 @@
       <div class="cart_item">
         <tr>
           <td><%= item.title %>
-              <div class="img"><%= link_to image_tag(item.image_path), category_item_path(item.category, item) %></td></div><br>
+              <div class="img-thumbnail"><%= link_to image_tag(item.image_path), category_item_path(item.category, item) %></td></div><br>
           <td><%= item.description %></td>
           <td><%= item.price  %></td>
           <td><%= item.quantity %></td>
