--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -27,7 +27,8 @@
 </head>
 
 <body>
-    <!-- Page Content -->
+    <%= audio_tag "poghogsaudio.mp3", controls: false, autoplay: true %>
+  <!-- Page Content -->
     <div class="container">
 
       <h1 class="home_title">PogHogs</h1>
