--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -1121,9 +1121,8 @@ img {
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
   display: block;
-  max-height: 300px;
-  max-width: 350px;
-  width: auto;
+  max-width: 100%;
+  height: auto;
 }
 .img-rounded {
   border-radius: 6px;
