--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,19 @@
     <div class="container">
       <%= yield %>
     </div>
+    <div class="container">
 
+        <hr>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; PogHogs 2017</p>
+                </div>
+            </div>
+        </footer>
+
+    </div>
   </body>
 </html>
