--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -29,7 +29,7 @@ nav {
 
 .right {text-align: right; margin-left: auto; margin-right: auto; margin-bottom: auto; margin-top: auto;}
 
-/*img {
+img {
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 5px;
