--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -38,7 +38,7 @@ img {
 
 img:hover {
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
-}*/
+}
 
 #shopnow > a{
   /*-webkit-text-stroke: .5px black;*/
