--- a/app/views/application/admin_dashboard.html.erb
+++ b/app/views/application/admin_dashboard.html.erb
@@ -38,11 +38,11 @@
       <td><%= order.created_at.strftime("%d %b. %Y") %></td>
       <td><%= order.updated_at.strftime("%l:%M%P, %d %b. %Y") %></td>
       <td><%= order.total_price %></td>
-      <td><%= button_to "Mark as Completed", admin_order_path(order, :status => "completed"), method: :put %></td>
-              <!-- add to end of line above if client doesn't want button showing for all statuses=> if order.status == "paid" -->
-      <td><%= button_to "Cancel", admin_order_path(order, :status => "cancelled"), method: :put %></td>
+      <td><%= button_to "Cancel", admin_order_path(order, :status => "cancelled"), method: :put, :disabled => order.completed? || order.cancelled? %></td>
+      <td><%= button_to "Mark as Paid", admin_order_path(order, :status => "paid"), method: :put, :disabled => order.paid? || order.completed? || order.cancelled? %></td>
+      <td><%= button_to "Mark as Completed", admin_order_path(order, :status => "completed"), method: :put, :disabled => order.completed? || order.cancelled? || order.ordered? %></td>
+              <!-- add to end of line above if client doesn't want button showing for all statuses=> if order.status == "paid"-->
               <!-- add to end of line above if client doesn't want button showing for all statuses=> if order.status == "ordered" || order.status == "paid" -->
-      <td><%= button_to "Mark as Paid", admin_order_path(order, :status => "paid"), method: :put %></td>
               <!-- add to end of line above if client doesn't want button showing for all statuses=> if order.status == "ordered"-->
     </tr>
       <% end %>
