--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -105,7 +105,14 @@
         </div>
 
     </div>
-  
+    <!-- Footer -->
+    <footer>
+      <div class="row">
+        <div class="col-lg-12">
+          <p>Copyright &copy; PogHogs 2017</p>
+        </div>
+      </div>
+    </footer>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
