--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
             <%- else -%>
               <li><%= link_to "Log In", login_path, method: :get %> </li>
             <%- end -%>
-              <li><%= link_to "My Cart: #{@cart.total_count}", '/cart' %></li>
+              <li><%= link_to "My Cart: #{@cart.total_count.abs}", '/cart' %></li>
           </ul>
         </nav>
       </div>
