--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -73,6 +73,7 @@
   <%= button_to "Log In to Checkout", login_path, method: :get, class: "btn btn-danger"  %>
   <small><%= link_to "Create Account", new_user_path %></small>
   <%- end -%>
+  <%= button_to "Shop Some More!", items_path, method: :get, class: "btn btn-warning"  %>
 </div>
 
 <!-- jQuery -->
