--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -17,18 +17,12 @@
     <!-- Custom CSS -->
     <link href="css/shop-homepage.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body>
     <%= audio_tag "poghogsaudio.mp3", controls: false, autoplay: true %>
   <!-- Page Content -->
+  <div class="col-lg-12">
     <div class="container">
 
       <h1 class="home_title">PogHogs</h1>
@@ -100,6 +94,7 @@
         </div>
 
     </div>
+  </div>
     <!-- Footer -->
     <footer>
       <div class="row">
